--- a/.github/workflows/projcet_feedback.yml
+++ b/.github/workflows/projcet_feedback.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: CAgcoder/2023-amse-template
-          path: test
+          path: project
 
       - name: Set up Node
         uses: actions/setup-node@v3
@@ -36,4 +36,4 @@ jobs:
       # Run project feedback
       - name: Project feedback
         run: |
-          ./test/project/datapipline_test.sh
+          ./project/datapipline_test.sh
