--- a/.github/workflows/projcet-feedback.yml
+++ b/.github/workflows/projcet-feedback.yml
@@ -16,16 +16,8 @@ jobs:
         with:
           path: main
 
-      - name: Checkout project feedback
-        uses: actions/checkout@v3
-        with:
-          repository: CAgcoder/2023-amse-template
-          path: testing
-
-      - name: Set up Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "lts/*"
+      - name: Check out code
+        uses: actions/checkout@v2
 
       # Install python
       - name: Set up Python 3.11
@@ -36,4 +28,5 @@ jobs:
       # Run project feedback
       - name: Project feedback
         run: |
-          ./testing/project/datapipline_test.sh
+          chmod +x proj/test.sh
+          ./project/datapipline_test.sh
